--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ h3 {
   line-height: 1.19;
   text-decoration: none;
   color: var(--dark-color);
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  /* text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .web {
@@ -152,12 +152,19 @@ h3 {
 
 .hero {
   text-align: center;
-  /* background-color: springgreen; */
+  background-color: rgba(47, 48, 58, 0.8); 
+  width: 1600px;
+height: 600px;
+margin-left: auto;
+margin-right: auto;
 }
 
 .hero-title {
-  margin-top: 200px;
-  margin-bottom: 30px;
+   /* margin-top: 200px; */ */
+   /* margin-bottom: 30px; */ */
+  /* padding-top: 200px; */
+  /* padding-bottom: 30px; */
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
   width: 696px;
@@ -172,13 +179,14 @@ h3 {
   /* color: rgb(152, 152, 160); */
 }
 
-.btn {
+.hero-button {
   display: inline-block;
+  
   padding: 10px 32px;
   border-radius: 4px;
   min-width: 200px;
   font-family: inherit;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
   text-align: center;
@@ -187,7 +195,15 @@ h3 {
   background: #2196f3;
   color: #ffffff;
 }
-
+.container-hero {
+  width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  /* outline: 1px solid brown; */
+}
 /* <!--Преимушества--> */
 
 .margin-top {
@@ -354,8 +370,16 @@ h3 {
 }
 
 .clients-item {
+  display: flex;
+  justify-content: center;
   width: 170px;
   height: 90px;
+  align-items: center;
+  min-height: 90px;
+  /* background-color: gray; */
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  
 }
 
 .clients-item:not(:last-child) {
@@ -409,7 +433,7 @@ a {
   /* margin: -15px; */
   /* outline-color: rgb(80, 47, 80); */
   /* background-color: seagreen; */
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+  /* box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), */
     0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
@@ -439,17 +463,26 @@ a {
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;*/
   border-top: none;
+  box-sizing: inherit;
 }
 
-.section-title {
+.section-title-list {
   /* margin-top: 20px; */
   /* margin-bottom: 4px; */
-  text-align: center;
+  /* text-align: center; */
   font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
+  /* font-size: 36px; */
+  /* line-height: 42px; */
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  width: 322px;
+height: 36px;
+left: 639px;
+top: 576px;
+
+
+font-size: 18px;
+line-height: 36px;
 }
 
 .list-description {
