--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ h3 {
 .hero {
   text-align: center;
   background-color: rgba(47, 48, 58, 0.8); 
-  width: 1600px;
+  /* width: 1600px; */
 height: 600px;
 margin-left: auto;
 margin-right: auto;
